# arc-mcp-builder-assistant

./: .env.example  .gitattributes  .gitignore  .graphifyignore  .mailmap  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PR_SUMMARY.md  README.md  SECURITY.md  build_support.py  index.html  pyproject.toml  robots.txt  setup.py  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml  readiness-monitor.yml  validate.yml
.hermes/plans/: 2026-06-05-arc-testnet-send-readiness-gate.md
.well-known/: security.txt
arc_builder_kit/: __init__.py  __main__.py  _paths.py  arc_client.py  circle_wallet_sdk.py  cli.py  doctor.py  mcp_server.py  release_packet.py  validate_repo.py  x402_client.py
config/: arc_testnet.facts.json
docs/: agent-commerce-components.md  agent-commerce-flow-library.md  agent-commerce-kit.md  agent-commerce-live-evidence.md  agent-commerce-review-packet.md  agent-commerce-use-cases.md  agent-identity-erc8004.md  agent-identity-profile-preview.md  agentic-maintainer-loop.md  arc-agent-treasury-lab.md  arc-builder-doctor.md  arc-builder-readiness-checklist.md  arc-discord-introduction.md  arc-docs-map.md  arc-house-submission.md  arc-mcp-setup.md  arc-paid-api-endpoint.md  arc-production-deployment.md  arc-testnet-integration-runbook.md  arc-testnet-operator-evidence.md  arc-testnet-operator-runbook.md  arc-testnet-send-readiness-gate.md  arc-wallet-integration-notes.md  build-log.md  builder-tooling.md  builder-workflows.md  circle-wallet-integration.md  completion-contract.md  content-pack.md  contest-demo-script.md  current-readiness-report.md  custody-and-mainnet-gates.md  deploy-contracts-arc.md  guarded-wallet-send-runbook.md  job-escrow-demo.md  mcp-query-examples.md  payment-intent-demo.md  payment-intent-quickstart.md  payment-intent-receipt-matcher.md  payment-status-tutorial.md  (+11 more)
examples/agent-commerce-components/: components.js  index.html
examples/agent-commerce-flows/: flows.js  index.html
examples/agent-commerce-live/: commerce-live.js  index.html
examples/agent-commerce-review-packet/: index.html  packet.js
examples/agent-identity-profile-preview/: identity.js  index.html
examples/arc-agent-treasury-lab/: index.html  treasury.js
examples/arc-paid-api-endpoint/: README.md  server.py
examples/arc-testnet-operator-evidence/: evidence.example.json
examples/arc-testnet-wallet-send-gate/: index.html  live-infrastructure-policy.example.json  wallet-send-gate.js
prompts/: agentic-maintainer-loop.md  build-payment-intent-demo.md  deploy-contracts-on-arc.md  explain-arc-docs.md  register-agent-notes.md  wire-arc-testnet-status.md
scripts/: arc_agent_treasury_behavior_harness.mjs  arc_builder_cli.py  arc_builder_doctor.py  arc_builder_mcp_server.py  check_arc_testnet_status.py  check_completion.py  check_release_version.py  docs_viewer_behavior_harness.mjs  generate_arc_release_packet.py  generate_operator_evidence_draft.py  install_repo_hooks.py  live_arc_gateway_smoke.py  payment_intent_receipt_matcher_behavior_harness.mjs  pre_commit_guard.py  receipt_viewer_behavior_harness.mjs  report_operator_evidence.py  scan_for_secrets.py  serve_local.py  test_agent_commerce_components.py  test_agent_commerce_flows.py  test_agent_commerce_live.py  test_agent_commerce_review_packet.py  test_agent_identity_profile_preview.py  test_all.py  test_arc_agent_treasury_lab.py  test_arc_builder_cli.py  test_arc_builder_doctor.py  test_arc_builder_mcp_server.py  test_arc_paid_api_endpoint.py  test_arc_production_deployment.py  test_arc_release_packet.py  test_arc_testnet_facts.py  test_arc_testnet_status_helper.py  test_arc_testnet_wallet_send_behavior.py  test_arc_testnet_wallet_send_gate.py  test_circle_wallet_integration.py  test_circle_wallet_sdk.py  test_completion_contract.py  test_docs_viewer_behavior.py  test_docs_viewer_security.py  (+26 more)
templates/: README.md
tests/: test_core.py
(+38 files in other folders)
