[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-builder-kit"
version = "0.1.0"
description = "Arc MCP Builder Assistant — installable CLI and MCP server for Arc builder tooling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Anstrays"},
]
keywords = ["arc", "mcp", "builder", "stablecoin", "agent", "x402"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
arc-builder = "arc_builder_kit.cli:main"
arc-builder-mcp-server = "arc_builder_kit.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
include = ["arc_builder_kit*"]

[tool.setuptools.package-data]
arc_builder_kit = [
    "templates/**/*",
    "config/**/*",
    "examples/**/*",
]
