[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "arc-builder-kit"
version = "0.2.0"
description = "Python toolkit for Arc MCP/docs, Circle wallet integration, and agentic commerce prototypes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arc Builder", email = "builder@example.com"},
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = []

[project.urls]
Home = "https://github.com/Anstrays/arc-mcp-builder-assistant"
Docs = "https://docs.arc.network/arc/"

[project.scripts]
arc-builder = "arc_builder_kit.cli:app"

[tool.setuptools.packages.find]
include = ["arc_builder_kit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
