[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-builder-kit"
version = "0.4.0"
description = "Arc MCP Builder Assistant — installable CLI and MCP server for Arc builder tooling."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Anstrays"},
]
keywords = ["arc", "mcp", "builder", "stablecoin", "agent", "x402", "usdc", "circle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://anstrays.github.io/arc-mcp-builder-assistant/"
Documentation = "https://anstrays.github.io/arc-mcp-builder-assistant/"
Repository = "https://github.com/Anstrays/arc-mcp-builder-assistant"
Issues = "https://github.com/Anstrays/arc-mcp-builder-assistant/issues"
Changelog = "https://github.com/Anstrays/arc-mcp-builder-assistant/blob/main/CHANGELOG.md"

[project.scripts]
arc-builder = "arc_builder_kit.cli:main"
arc-builder-mcp-server = "arc_builder_kit.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=5.0",
]

[tool.setuptools.packages.find]
include = ["arc_builder_kit*"]

[tool.setuptools]
include-package-data = false
